assurance_interface_complete + ajout_reclamation_form