@@ -15,21 +15,21 @@
     </properties>
 
     <dependencies>
-        <!-- MySQL Connector -->
+
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.33</version>
         </dependency>
 
-        <!-- JavaFX Controls -->
+        <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-controls -->
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
             <version>22.0.2</version>
         </dependency>
-
-        <!-- JavaFX FXML -->
+        <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-fxml -->
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
@@ -45,14 +45,9 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>tn.esprit.test.MainFX</mainClass>
-                    <!-- Configure modules explicitly -->
-                    <options>
-                        <option>--module-path</option>
-                        <option>${java.home}/lib/javafx-packager.jar</option>
-                        <option>--add-modules</option>
-                        <option>javafx.controls,javafx.fxml</option>
-                    </options>
+                    <mainClass>
+                        tn.esprit.test.MainFX
+                    </mainClass>
                 </configuration>
             </plugin>
         </plugins>
